sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Failed_Step_Mapping__mdt/Inbound_Ingestion_Failed_Step_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>It is used to store the mapping of failed steps with corresponding event topics.</description>
    <label>Inbound Ingestion Failed Step Mapping</label>
    <pluralLabel>Inbound Ingestion Failed Step Mappings</pluralLabel>
</CustomObject>