sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Failed_Step_Mapping__mdt/fields/Event_Topic__c.field-meta.xml
<CustomField>
    <fullName>Event_Topic__c</fullName>
    <description>It is used store the topic of the Event.</description>
    <label>Event Topic</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>