sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Failed_Step_Mapping__mdt/fields/Falied_Step__c.field-meta.xml
<CustomField>
    <fullName>Falied_Step__c</fullName>
    <label>Failed Step</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>