sfdx-source/force-app/main/default/objects/Inbound_Ingestion_Failed_Step_Mapping__mdt/listViews/All_Topics.listView-meta.xml
<ListView>
    <fullName>All_Topics</fullName>
    <columns>MasterLabel</columns>
    <columns>Integration_Source__c</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Event_Topic__c</columns>
    <columns>Falied_Step__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Topics</label>
</ListView>